--- a/src/pages/game/game.css
+++ b/src/pages/game/game.css
@@ -1,7 +1,7 @@
-.main {
+.game-container {
     height: 100%;
     display: flex;
     flex-direction: row;
     align-content: center;
-    background-color: lightcoral;
+    background-color: #FFF;
 }
