--- a/src/pages/setup/setup.css
+++ b/src/pages/setup/setup.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
-
-.container {
+.setup-container {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(7, 1fr);
@@ -10,22 +7,22 @@
     height: 100%;
 }
 
-.text-container {
+.setup-title-container {
     grid-area: 2 / 2 / 3 / 7;
 }
 
-.text-container h1 {
+.setup-title-container h1 {
     text-align: center;
-    color: white;
+    color: #000;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Lobster', cursive;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 30px;
 }
 
-.button-container {
+.setup-button-container {
     grid-area: 3 / 2 / 4 / 7;
     display: flex;
     flex-direction: row;
@@ -33,51 +30,61 @@
     padding: 20px;
 }
 
-.button-container button {
-    background-color: indianred;
-    color: white;
-    font-family: 'Cabin', sans-serif;
+.setup-button-container button {
+    background-color: #E3D4AD;
+    color: #000;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
     padding: 12px 28px;
     border-radius: 10px;
-    border: 2px solid white;
+    border: 2px solid #E3D4AD;
     opacity: 0.7;
     transition: 0.3s;
 }
 
-.button-container button:hover {
+.setup-button-container button:hover {
     opacity: 1;
 }
 
-.button-container button:active {
+.setup-button-container button:active {
     opacity: 1;
 }
 
-.form-container {
+.setup-form-container {
     grid-area: 4 / 2 / 7 / 7;
     padding: 10px 30px 0px;
 }
 
-form {
+.setup-form-container form {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
 
-form input {
+.setup-form-container form input {
     padding: 12px 20px;
-    border: 2px solid indianred;
+    border: 1px solid #000;
     border-radius: 5px;
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
-form button {
-    background-color: indianred;
-    color: white;
+.setup-form-container form button {
+    background-color: #E3D4AD;
+    opacity: 0.7;
+    transition: 0.3s;
+    color: #000;
     padding: 12px 20px;
     border-radius: 5px;
-    border: 2px solid white;
+    border: 2px solid #E3D4AD;
     font-size: 20px;
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.setup-form-container form button:hover {
+    opacity: 1;
+}
+
+.setup-form-container form button:active {
+    opacity: 1;
 }
