--- a/src/pages/startpage/startpage.css
+++ b/src/pages/startpage/startpage.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
-
-.container {
+.startpage-container {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(7, 1fr);
@@ -10,38 +7,38 @@
     height: 100%;
 }
 
-.text-container {
-    grid-area: 2 / 2 / 4 / 7;
-}
-
-.text-container h1 {
-    text-align: center;
-    color: white;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Lobster', cursive;
-    font-size: 100px;
-}
-
-.startBtn {
+.startpage-container button {
     grid-area: 5 / 2 / 7 / 7;
-    background-color: indianred;
-    color: white;
+    background-color: #E3D4AD;
+    color: #000;
     padding: 12px 28px;
     border-radius: 12px;
-    border: 2px solid white;
+    border: 2px solid #E3D4AD;;
     width: 100%;
     display: block;
     margin: 0 auto;
     opacity: 0.8;
     transition: 0.3s;
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 30px;
     font-weight: 700;
 }
 
-.startBtn:hover {
+.startpage-container button:hover {
     opacity: 1;
+}
+
+.startpage-title-container {
+    grid-area: 2 / 2 / 4 / 7;
+}
+
+.startpage-title-container h1 {
+    text-align: center;
+    color: #000;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 60px;
 }
